@@ -1,5 +1,6 @@
 using System;
 using System.Collections.Generic;
+using System.Linq.Expressions;
 using System.Net.Http;
 using Boxroom.Core;
 
@@ -12,5 +13,6 @@ namespace Boxroom.Rest
         HttpClient HttpClient { get; set; }
         HttpResponseMessage Response { get; set; }
         Dictionary<string, string> Headers { get; set; }
+        string RenderAsQueryString<T>(Expression<Func<T, bool>> filter);
     }
 }
