@@ -7,6 +7,6 @@ namespace Test
         public string Id { get; set; }
         public DateTime UpdatedOn { get; set; }
         public string Name { get; set; }
-        public string Field;
+        public string AProperty { get; set; }
     }
 }
