@@ -1,0 +1,9 @@
+namespace Boxroom.Rest
+{
+    internal enum VisitorOption
+    {
+        None,
+        Left,
+        Right
+    }
+}
